# MaRe-Nostrum

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: CI.yml
data/: file.txt  file10000.txt  gen.py  test.txt  text.txt
exe/: CMakeLists.txt  main.cpp
include/: map_reduce.h  mapper.h  reducer.h
src/: CMakeLists.txt  map_reduce.cpp  mapper.cpp  reducer.cpp
test/: CMakeLists.txt
test/include/: map_reduce_test.h
test/integr/: test.sh
test/src/: map_reduce_test.cpp
test/static/: test_data.txt
test/unit/: CMakeLists.txt  test.cpp
